fixed overflow x issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,18 +50,21 @@
     --color-background-about: #cdcecf;
 }
 
-body {
-  position: relative;
+
+
+html, body {
+  /* position: relative;
   width: 100vw;
-  height: fit-content;
+  height: fit-content; */
   overflow-x: hidden;
 }
 
 #body {
   background: linear-gradient(135deg, white ,var(--color-background));
   position: relative;
-  width: fit-content;
-  height: fit-content;
+  width: 100vw;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 #projects, #about, #resume {
